--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.6.2"
-kube = { version = "0.15.1", git = "https://github.com/clux/kube-rs" }
+kube = { version = "0.16.1" }
 log = "0.4.8"
 semver = { version = "0.9.0", features = [ "serde" ] }
 serde = { version = "1.0.99", features = [ "derive" ] }
