--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4.9", features = [ "serde" ] }
 env_logger = "0.6.2"
 kube = { version = "0.16.1" }
 log = "0.4.8"
